# Qt-Desktop-Ver1

./: CMakeLists.txt  Main.qml  README.md  init.sql  main.cpp  qtquickcontrols2.conf
AppQml/: CMakeLists.txt  Consts.qml  GlobalEnums.qml  GlobalVariable.qml  PageHome.qml  PageLineState.qml  PageMain.qml  PageSets.qml  PageTLogs.qml  PageWatching.qml  T_PageTests.qml  qmlcppdemo.cpp  qmlcppdemo.h
AppQml/com/: ComButton.qml  ComDelay.qml  ComDevice.qml  ComDialog.qml  ComDialogProgress.qml  ComExpand.qml  ComGuassPane.qml  ComLabel.qml  ComList.qml  ComLoading.qml  ComPane.qml  ComSplitView.qml  ComSwitch.qml  ComTable.qml  ComTextEdit.qml  ComTextEditBold.qml  ComTextField.qml  ComToolTip.qml
AppQml/js/: Common.js
AppQmlBackend/: CMakeLists.txt  httplogworker.h  parasdbapi.cpp  parasdbapi.h  progmservice.cpp  progmservice.h  qmlservice.cpp  qmlservice.h
DbEntity/: CMakeLists.txt  baseentity.h  parasmachine.cpp  parasmachine.h  parasparas.cpp  parasparas.h  tlogs.cpp  tlogs.h
DeviceBackend/: CMakeLists.txt  devicebarcodescanner.cpp  devicebarcodescanner.h  devicecenter.cpp  devicecenter.h  devicelineno.h  deviceplc.cpp  deviceplc.h  devicerobot.cpp  devicerobot.h  devicescanner.cpp  devicescanner.h
DeviceBackend/centworker/: iogateway.cpp  iogateway.h  iomoduleworker.cpp  iomoduleworker.h  pathfindingworker.cpp  pathfindingworker.h  plcworker.cpp  plcworker.h  pointworker.cpp  pointworker.h  robotworker.cpp  robotworker.h  scannerworker.cpp  scannerworker.h  schedulingworker.cpp  schedulingworker.h  sysworker.cpp  sysworker.h
DeviceBackend/centworker/struct/: cmdpacket.cpp  cmdpacket.h
DeviceBackend/struct/: hdatetime.cpp  hdatetime.h  logstruct.cpp  logstruct.h
DeviceBackend/worker/: hdatetimeworker.cpp  hdatetimeworker.h  httpaddlogworker.cpp  httpaddlogworker.h  modbustcpworker.cpp  modbustcpworker.h  modbustcpworkersender.cpp  modbustcpworkersender.h  tcpserverworker.cpp  tcpserverworker.h  tcpserverworkersender.cpp  tcpserverworkersender.h  tcpworker.cpp  tcpworker.h  tcpworkersender.cpp  tcpworkersender.h
DeviceBackend/worker/httpserver/: httpserverworker.cpp  httpserverworker.h
DeviceBackend/worker/httpserver/services/: baseservice.cpp  baseservice.h  ctuservice.cpp  ctuservice.h
QmlFontLoader/: CMakeLists.txt  DirectoryFontLoader.qml
docs/: f_ParasPage.md
maincom/: ComHelpDialog.qml
resources/: windows.rc
